# azouk-libraries

./: .gitignore  CMakeLists.txt  bootstrap.sh  configure.ac  multiplexer.rules
azouk/logging/: type_id_constants.h
cmake/: Toolchain-mingw32.cmake
debian/: .gitignore  changelog  control  multiplexer-openbci.install  multiplexer-source.examples  multiplexer-source.install  multiplexer-source.rules  openbci-libmultiplexer-dev.install  openbci-libmultiplexer0.install  openbci-multiplexer-python.install  openbci-multiplexer.examples  openbci-multiplexer.install  openbci-multiplexer.links  rules
m4/: azouk_python_config.m4  boost.m4
src/: Makefile.am  mxcontrol.cc  server.cc
src/azlib/: initialization.h  logging.cc  logging.h  program.h  random.cc  random.h  repr.h  signals.cc  signals.h  spanset.h  str.h  timer.h  triple.h
src/azlib/encoders/: BaseDecoder.h  BaseEncoder.h  DecodeFromRange.h  EncodeToRange.h
src/azlib/encodings/: LittleEndian.h
src/azlib/logging/: impl.h  log_tokens.h
src/azlib/preproc/: common.h  create_message.h  kwargs.h
src/azlib/preproc/create_message/: detail.h
src/azlib/protobuf/: stream.h
src/azlib/util/: Assert.cc  Assert.h  Exception.cc  Exception.h  IntrusiveValue.h  fd.h  functors.h  type_functors.h  type_utils.h
src/azouk/: _allinonemodule.cc  _loggingmodule.cc  xrelease.cc
src/azouk/logging/: type_id_constants.h.in
src/azouk/util/: kwargs.cc  kwargs.h
src/multiplexer/: BasicClient.cc  BasicClient.h  Client.cc  Client.h  Config.h  ConnectionsManager.cc  ConnectionsManager.h  Server.cc  Server.h  _mxclientmodule.cc  clients.py  configuration.h
src/multiplexer/backend/: BaseMultiplexerServer.cc  BaseMultiplexerServer.h
src/multiplexer/io/: Connection.h  RawMessage.cc  RawMessage.h
src/mxcontrol-commands/: Help.cc  Help.h  ReceiveLogs.cc  StartMultiplexerServer.cc  StartMultiplexerServer.h  StreamLogs.cc  Task.cc  Task.h  TasksHolder.cc  TasksHolder.h  Version.cc  Version.h
tools/: configure.ac  generate_constants.cc
